fix TopNav covering section headers when using anchor links

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,10 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
 }
+
+@media (min-width: 600px) {
+  html,
+  body {
+    scroll-padding-top: 72px;
+  }
+}
